--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.3.0"
+    "vite": "^6.3.3"
+  },
+  "dependencies": {
+    "config": "^3.3.12"
   }
 }
